--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:rgb(111, 140, 196);">!</h2>
+    	<h2 style="color:rgb(111, 140, 196);">💜</h2>
     </div>
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
 	<div class="container">
