--- a/index.html
+++ b/index.html
@@ -35,20 +35,26 @@
 	   Your browser isn't invited for super fun audio time.
         </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">A</h2>
+    	<h2 style="color:#F2B300;">C</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">N</h2>
+    	<h2 style="color:#0719D4;">I</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">N</h2>
+    	<h2 style="color:#D14D39;">A</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">A</h2>
+    	<h2 style="color:#8FAD00;">N</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:rgb(111, 140, 196);">💜</h2>
+    	<h2 style="color:rgb(111, 140, 196);">N</h2>
     </div>
+	<div class="balloons text-center" id="b6">
+		<h2 style="color:#F2B300;">A</h2>
+	</div>
+	<div class="balloons text-center" id="b7">
+		<h2 style="color:#0091ff;">💜</h2>
+	</div>
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
 	<div class="container">
 		
